--- a/media/css/yoo-features.css
+++ b/media/css/yoo-features.css
@@ -4,7 +4,7 @@ padding: 40px 0;
 position: relative;
 height:auto;
 margin: 0 auto;
-height:370px;
+height: 800px;
 overflow:hidden;
 }
 
@@ -16,6 +16,35 @@ background-color: #fff;
 z-index: 3;
 }
 
+.yoo-feature{perspective: 1000px;}
+.yoo-feature:hover .flipper, .yoo-feature.hover .flipper {
+	transform: rotateY(180deg);
+}
+
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+.serv_card_front, .serv_card_back {
+	backface-visibility: hidden;
+	width: 100%;
+	height: 370px;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.serv_card_front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.serv_card_back {transform: rotateY(180deg); text-align: center; border-style: inset;}
+.serv_card_back .info_table{background-color: #eee; height: 100%;position: relative;padding: 10px;}
 
 .serv_card{
 position:relative;
@@ -30,47 +59,7 @@ width:100%;
 text-align: center;
 }
 
-.screen{
-position: absolute;
-height: 100%;
-cursor: pointer;
-opacity: 0;
-background-color: #33FFCC;
-}
 
-
-
-.serv_detail{
-position: absolute;
-opacity:0;
-width: 100%;
-height:370px;
-background-color: #fff;
-border: 1px solid #000;
-z-index: 1;
-
-}
-
-
-.serv_detail .info_table{
-position: realtive;
-height: 96%;
-width:69%;
-margin-top: 1%;
-margin-left: 1%;
-float:left;
-/*background-color: #ffff88;*/
-}
-
-.serv_detail .pic{
-position: realtive;
-height: 96%;
-width:28%;
-margin-top: 1%;
-margin-right: 1%;
-float:right;
-/*background-color: #ffff88;*/
-}
 
 .serv_close{
 position: absolute;
@@ -85,3 +74,29 @@ opacity:1;
 cursor: pointer;
 }
 
+/*==========  Mobile First Method  ==========*/
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (max-width : 320px) {
+    .serv_card{width: 100%;}
+}
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (max-width  : 480px) {
+    .serv_card{width: 100%;}
+        }
+
+    /* Small Devices, Tablets */
+    @media only screen and (max-width  : 768px) {
+	
+        }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (max-width  : 992px) {
+
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (max-width  : 1200px) {
+
+    }
