--- a/media/css/yoo-features.css
+++ b/media/css/yoo-features.css
@@ -3,24 +3,28 @@
 .yoo-title{text-align: center;padding: 80px 0 0 0;}
 
 .yoo-features {
-display: table;
-padding: 20px 0 100px 0;
-height: 600px;
-margin: 0 auto;
+  display: table;
+  padding: 20px 0 100px 0;
+  height: 600px;
+  margin: 0 auto;
 }
+
 
 .serv_board{margin: 10px auto; display: table-cell; vertical-align: middle;}
 .yoo-feature{display: flex;}
 .flipcard{
-	-webkit-perspective: 500px;
-	-moz-perspective:500px;
-	-o-perspective:500px;
-	perspective: 500px;
+  cursor: pointer;
+	-webkit-perspective: 2000px;
+	-moz-perspective:2000px;
+	-o-perspective:2000px;
+	perspective: 2000px;
 	position: relative;
 	width: 250px;
 	height: 420px;
 	margin:10px auto;
 }
+.IntroText{position: absolute;text-align: center;width: 230px; height: 400px; background-color: rgba(0, 0, 0, 0.4);
+ } /* Ширина дива интро текст должна быть равна ширине флипкард минус паддинг и высота*/
 
 .flipcard.v:hover .serv_card_front, .flipcard.v.flip .serv_card_front{
   transform: rotateX(180deg);
